Revert "SONAR-19050 added characteristic to elasticsearch index"
This reverts commit b60a9ddcc6857769dac8f534734ed314d152288b.